argocd/manifests/prod/apps/onlyoffice/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice
  namespace: onlyoffice
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/max-body-size: "100M"
    traefik.ingress.kubernetes.io/readtimeout: "900"
    traefik.ingress.kubernetes.io/writetimeout: "900"
    traefik.ingress.kubernetes.io/idletimeout: "900"
    # Use Traefik Middleware for HTTPS headers
    traefik.ingress.kubernetes.io/router.middlewares: onlyoffice-onlyoffice-headers@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
    - host: onlyoffice.pengiuns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlyoffice
                port:
                  number: 80
  tls:
    - hosts:
        - onlyoffice.pengiuns.com
      secretName: letsencrypt-wildcard-cert-pengiuns.com-production
